<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.avenga.steamclient</groupId>
    <artifactId>steamclient</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <lombok.version>1.18.10</lombok.version>
        <commons-lang3.version>3.9</commons-lang3.version>
        <protobuf-java.version>3.11.1</protobuf-java.version>
        <steam-language-gen.version>1.0.0-SNAPSHOT</steam-language-gen.version>
        <protoc-jar-maven-plugin.version>3.11.1</protoc-jar-maven-plugin.version>
        <slf4j-api.version>1.8.0-beta4</slf4j-api.version>
        <bcprov-jdk15on.version>1.64</bcprov-jdk15on.version>
        <Java-WebSocket.version>1.4.0</Java-WebSocket.version>
        <jackson.version>2.10.1</jackson.version>
        <cvurl-io.version>1.3</cvurl-io.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <version>${protobuf-java.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>${bcprov-jdk15on.version}</version>
        </dependency>

        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>${Java-WebSocket.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.corese4rch</groupId>
            <artifactId>cvurl-io</artifactId>
            <version>${cvurl-io.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.avenga</groupId>
                <artifactId>steam-language-gen</artifactId>
                <version>${steam-language-gen.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>steam-language-gen</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.os72</groupId>
                <artifactId>protoc-jar-maven-plugin</artifactId>
                <version>${protoc-jar-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <includeMavenTypes>direct</includeMavenTypes>
                            <includeStdTypes>true</includeStdTypes>
                            <includeDirectories>
                                <include>src/main/protobuf</include>
                            </includeDirectories>
                            <outputTargets>
                                <outputTarget>
                                    <type>java</type>
                                    <addSources>main</addSources>
                                    <cleanOutputFolder>true</cleanOutputFolder>
                                    <outputDirectory>${project.build.directory}/generated/source/protobuff/main/java</outputDirectory>
                                </outputTarget>
                            </outputTargets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>